fix/word-overflow on the blog page and qrod wrap in hte homw page

--- a/asset/style.css
+++ b/asset/style.css
@@ -824,20 +824,20 @@ video {
   height: 10rem;
 }
 
-.h-48 {
-  height: 12rem;
-}
-
 .h-5 {
   height: 1.25rem;
+}
+
+.h-56 {
+  height: 14rem;
 }
 
 .h-6 {
   height: 1.5rem;
 }
 
-.h-96 {
-  height: 24rem;
+.h-60 {
+  height: 15rem;
 }
 
 .h-full {
